# MASI

./: .gitignore  CMakeSettings.json  Evaluation.md  README.md
examples/: CMakeLists.txt  benchmark_utils.h  flexnndemo.cpp  flexnnschedule.h  flexnnslice.h  layertest.cpp  modelwriter.h  mydataloader.h  powerlogger.h  xyplane.h
scripts/device/: setup-files.sh
src/: CMakeLists.txt  allocator.h  datareader.cpp  dummymat.cpp  mat.cpp  mat.h  net.cpp  net.h  option.cpp  option.h  plannedallocator.cpp  plannedallocator.h  profiler.cpp  profiler.h
src/layer/: batchnorm.cpp  batchnorm.h  convolution.cpp  gemm.cpp  lifnode.cpp  lifnode.h  padding.cpp  padding.h  reduction.cpp  reduction.h
src/layer/arm/: concat_arm.cpp  convolution_im2col_gemm.h  flatten_arm.cpp  gemm.cpp  gemm_arm.cpp  innerproduct_arm.cpp
